; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/extr_unaligned.c_within_logging_rate_limit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/extr_unaligned.c_within_logging_rate_limit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@within_logging_rate_limit.count = internal global i64 0, align 8
@within_logging_rate_limit.last_time = internal global i64 0, align 8
@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @within_logging_rate_limit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @within_logging_rate_limit() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @jiffies, align 8
  %3 = load i64, i64* @within_logging_rate_limit.last_time, align 8
  %4 = load i32, i32* @HZ, align 4
  %5 = mul nsw i32 5, %4
  %6 = sext i32 %5 to i64
  %7 = add i64 %3, %6
  %8 = call i64 @time_after(i64 %2, i64 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %0
  store i64 0, i64* @within_logging_rate_limit.count, align 8
  br label %11

11:                                               ; preds = %10, %0
  %12 = load i64, i64* @within_logging_rate_limit.count, align 8
  %13 = icmp ult i64 %12, 5
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i64, i64* @jiffies, align 8
  store i64 %15, i64* @within_logging_rate_limit.last_time, align 8
  %16 = load i64, i64* @within_logging_rate_limit.count, align 8
  %17 = add i64 %16, 1
  store i64 %17, i64* @within_logging_rate_limit.count, align 8
  store i32 1, i32* %1, align 4
  br label %19

18:                                               ; preds = %11
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %18, %14
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i64 @time_after(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
